[tool.poetry]
name = "llm-finetune"
version = "0.1.0"
description = "A package to fine-tune LLMs with different fine-tuning techniques"
authors = ["Efe Hoplamaz <hopefe.17@gmail.com>"]
readme = "README.md"
packages = [{include = "llm_finetune"}]

[tool.poetry.dependencies]
python = "^3.8"
transformers = "^4.37.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
